--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -8,6 +8,6 @@
     display: flex;
     flex-direction: row;
     -moz-osx-font-smoothing: grayscale;
-  border-left: 1px solid gray;
-  border-right: 1px solid gray;
+  border-left: 1px solid #553898;
+  border-right: 1px solid #553898;
 }
