--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,7 +4,9 @@
     max-width: 1280px;
     margin: 0 auto;
     width: 100%;
-    height: 100vh;   
+    height: 100vh;  
+    font-size: 18px;
+    line-height: 34px; 
     -moz-osx-font-smoothing: grayscale;
 }
 
